more nitpicky class fixes, ensure nav has all correct spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,12 +49,14 @@
 .btnMain {
   background-color: #FD815A;
   color: #FFFFFF;
+  font-weight: 700;
 }
 
 .btnSecondary {
   background-color: #E5ECFF;
   color: #4965CB;
   margin-left: 16px;
+  font-weight: 700;
 }
 
 .hero {
