--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -12,6 +12,10 @@
     display: flex;
     align-items: center;
 }
+
+.logo {
+  margin-right: 20px;
+}
   
 .navRight {
     display: flex;
@@ -37,6 +41,15 @@
 
 .navLinkSecondary {
   margin: 0 20px;
+  color: #FFFFFF;
+  font-size: 15px;
+  line-height: 18.15px;
+  align-items: center;
+  font-weight: 600;
+}
+
+.navLinkSecondaryRight {
+  margin-left: 20px;
   color: #FFFFFF;
   font-size: 15px;
   line-height: 18.15px;
